--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -8,12 +8,18 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   generate:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
       - name: Generate github-contribution-grid-snake.svg
         uses: Platane/snk@v3
         with:
